--- a/app/src/main/res/layout/item_channel.xml
+++ b/app/src/main/res/layout/item_channel.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
             name="channel"
-            type="com.sceyt.chat.models.channel.Channel" />
+            type="com.sceyt.chat.ui.data.models.SceytUiChannel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,9 +21,6 @@
             android:layout_height="0dp"
             android:layout_marginVertical="8dp"
             app:cardBackgroundColor="@color/colorGreen"
-            app:cardCornerRadius="30dp"
-            app:cardElevation="0dp"
-            app:imageUrl="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885__480.jpg"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +36,9 @@
             android:elevation="1dp"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@id/avatar"
-            app:layout_constraintEnd_toEndOf="@id/avatar" />
+            app:layout_constraintEnd_toEndOf="@id/avatar"
+            bind:channel="@{channel}"
+            tools:visibility="visible" />
 
         <androidx.constraintlayout.widget.Barrier
             android:id="@+id/infoBarrier"
@@ -69,12 +69,12 @@
             android:layout_marginTop="4dp"
             android:ellipsize="end"
             android:lines="1"
-            android:text="Description"
             android:textColor="@color/colorFontGray"
             android:textSize="@dimen/smallTextSize"
             app:layout_constraintEnd_toStartOf="@id/infoBarrier"
             app:layout_constraintStart_toStartOf="@id/channelTitle"
-            app:layout_constraintTop_toBottomOf="@+id/channelTitle" />
+            app:layout_constraintTop_toBottomOf="@+id/channelTitle"
+            tools:text="Description" />
 
         <View
             android:layout_width="0dp"
@@ -102,7 +102,10 @@
             android:src="@drawable/ic_status_read"
             app:layout_constraintBottom_toBottomOf="@id/updateDate"
             app:layout_constraintEnd_toStartOf="@id/updateDate"
-            app:layout_constraintTop_toTopOf="@id/updateDate" />
+            app:layout_constraintTop_toTopOf="@id/updateDate"
+            bind:incoming="@{channel.lastMessage.incoming}"
+            bind:status="@{channel.lastMessage.deliveryStatus}"
+            bind:visibleIf="@{!channel.lastMessage.incoming}" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/messageCount"
@@ -116,12 +119,12 @@
             android:paddingHorizontal="6dp"
             android:paddingVertical="2dp"
             android:singleLine="true"
-            android:text="9"
             android:textColor="@color/colorTextWhite"
             android:textSize="@dimen/extraSmallTextSize"
-            android:visibility="visible"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/updateDate" />
+            app:layout_constraintTop_toBottomOf="@+id/updateDate"
+            tools:text="9" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
