--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -3,7 +3,7 @@
 
     <declare-styleable name="ChannelListView">
 
-        <!-- Channel list items separator drawable -->
+        <!-- Channel list items separator drawable TODO-->
         <attr name="sceytUiChannelsItemSeparatorDrawable" format="reference" />
 
         <!--Background layout-->
@@ -26,7 +26,7 @@
         <!-- Text size of the channel title text TODO-->
         <attr name="sceytUiChannelTitleTextSize" format="dimension|reference" />
         <!-- A color of the channel title text -->
-        <attr name="sceytUiChannelTitleTextColor" format="color|reference" />
+        <attr name="sceytUiChannelTitleTextColor" format="reference" />
         <!-- Font name of the channel title text TODO-->
         <attr name="sceytUiChannelTitleTextFont" format="reference" />
         <!-- Font assets reference for the channel title text TODO-->
@@ -41,7 +41,7 @@
         <!-- Text size of the last message text TODO -->
         <attr name="sceytUiLastMessageTextSize" format="dimension|reference" />
         <!-- A color of the last message text -->
-        <attr name="sceytUiLastMessageTextColor" format="color|reference" />
+        <attr name="sceytUiLastMessageTextColor" format="reference" />
         <!-- Font name of the last message text TODO-->
         <attr name="sceytUiLastMessageTextFont" format="reference" />
         <!-- Font assets reference for the last message text TODO-->
@@ -81,8 +81,8 @@
 
         <!-- Text size of the unread message count text TODO-->
         <attr name="sceytUiUnreadMessageCounterTextSize" format="dimension|reference" />
-        <!-- A color of the unread message count text TODO-->
-        <attr name="sceytUiUnreadMessageCounterTextColor" format="color|reference" />
+        <!-- A color of the unread message count text -->
+        <attr name="sceytUiUnreadMessageCounterTextColor" format="reference" />
         <!-- Font name of the unread message count text TODO-->
         <attr name="sceytUiUnreadMessageCounterTextFont" format="reference" />
         <!-- Font assets reference for the unread message count text TODO-->
@@ -112,5 +112,30 @@
         <attr name="imageUrl" format="string" />
         <attr name="fullName" format="string" />
         <attr name="isGroup" format="boolean" />
+    </declare-styleable>
+
+    <declare-styleable name="ExpandableSearchBar">
+
+        <!-- ExpandableSearchBar Base Attributes-->
+        <attr name="isRounded" format="boolean"/> //(API 21+ , Will Revert To Default Shape On Lower
+        <attr name="autoCollapse" format="boolean"/>
+        <attr name="searchBarBackgroundColor" format="color"/>
+        <attr name="searchBarBackgroundColorFocused" format="color"/>
+        <attr name="searchBarElevation" format="dimension"/>
+        <attr name="searchBarCornerRadius" format="dimension"/>
+
+        <!-- ExpandableSearchBar Icons Attributes -->
+        <attr name="searchIconDrawable" format="reference"/>
+        <attr name="backIconDrawable" format="reference"/>
+        <attr name="clearIconDrawable" format="reference"/>
+        <attr name="searchIconTint" format="color"/>
+        <attr name="backIconTint" format="color"/>
+        <attr name="clearIconTint" format="color"/>
+
+        <!-- ExpandableSearchBar Text Attributes -->
+        <attr name="textColor" format="color"/>
+        <attr name="hint" format="string"/>
+        <attr name="hintColor" format="color"/>
+
     </declare-styleable>
 </resources>
