Was started creating functionality to search channels, was updated SceytSDK-debug.aar.

--- a/app/src/main/res/drawable/bg_online.xml
+++ b/app/src/main/res/drawable/bg_online.xml
@@ -4,5 +4,5 @@
     <solid android:color="@color/colorGreen" />
     <stroke
         android:width="2dp"
-        android:color="@color/white" />
+        android:color="#ffffff" />
 </shape>
