--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,12 +12,8 @@
         <item name="windowActionModeOverlay">false</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-    </style>
-
-    <style name="AppTheme.NoActionBar">
-        <item name="windowActionModeOverlay">false</item>
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
+       <!-- <item name="android:statusBarColor" >@android:color/white</item>
+        <item name="android:windowLightStatusBar">true</item>-->
     </style>
 
     <style name="AppBottomSheetDialogTheme" parent="Theme.Design.Light.BottomSheetDialog">
