--- a/app/src/main/res/layout/fragment_channels.xml
+++ b/app/src/main/res/layout/fragment_channels.xml
@@ -17,7 +17,11 @@
             android:paddingHorizontal="10dp"
             android:paddingVertical="8dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_scrollFlags="scroll|enterAlways|snap" />
+            app:layout_scrollFlags="scroll|enterAlways|snap"
+            app:sceytUiHintText="search..."
+            app:sceytUiHintTextColor="@color/hintColor"
+            app:sceytUiSearchIcon="@drawable/ic_search"
+            app:sceytUiTextColor="@color/black" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -25,6 +29,7 @@
         android:id="@+id/channelListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingHorizontal="10dp"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
         app:sceytUiChannelTitleTextSize="@dimen/_50sdp"
         app:sceytUiUnreadMessageCounterTextColor="@color/colorGreen" />
