Was created UI and functionality in the Channels pag. Was created functionality to change theme without recreate activity.

--- a/app/src/main/res/layout/sceyt_ui_item_channel.xml
+++ b/app/src/main/res/layout/sceyt_ui_item_channel.xml
@@ -6,6 +6,8 @@
 
     <data>
 
+        <import type="com.sceyt.chat.ui.R" />
+
         <variable
             name="channel"
             type="com.sceyt.chat.ui.data.models.SceytUiChannel" />
@@ -60,6 +62,7 @@
             app:layout_constraintEnd_toStartOf="@id/infoBarrier"
             app:layout_constraintStart_toEndOf="@+id/avatar"
             app:layout_constraintTop_toTopOf="@id/avatar"
+            bind:themedTextColor="@{R.color.colorFontDark}"
             tools:text="Title" />
 
         <androidx.appcompat.widget.AppCompatTextView
