--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+
+        <import type="com.sceyt.chat.ui.R" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/con"
@@ -17,14 +23,16 @@
             android:background="@color/whiteThemed"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            bind:themedBackgroundColor="@{R.color.whiteThemed}">
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:title="Channels"
-                app:titleTextColor="@color/black">
+                app:titleTextColor="@color/black"
+                bind:themedTextColor="@{R.color.black}">
 
                 <androidx.appcompat.widget.SwitchCompat
                     android:id="@+id/switchCompat"
@@ -32,7 +40,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
                     android:text="Dark Theme"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/black"
+                    bind:themedTextColor="@{R.color.black}" />
 
             </androidx.appcompat.widget.Toolbar>
 
@@ -40,9 +49,9 @@
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/mainFrameLayout"
+            android:name="com.sceyt.chat.ui.ChannelsFragment"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:name="com.sceyt.chat.ui.ChannelsFragment"
             app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +65,8 @@
             app:itemIconTint="@color/bottom_nav_item_color"
             app:itemTextColor="@color/bottom_nav_item_color"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:menu="@menu/menu_bottom_navigation" />
+            app:menu="@menu/menu_bottom_navigation"
+            bind:themedBackgroundColor="@{R.color.whiteThemed}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
