--- a/app/src/main/res/layout/sceyt_ui_item_channel.xml
+++ b/app/src/main/res/layout/sceyt_ui_item_channel.xml
@@ -128,6 +128,7 @@
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/updateDate"
+            bind:setUnreadCount="@{channel}"
             tools:text="9"
             tools:visibility="visible" />
 
