--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -9,4 +9,5 @@
     <color name="colorFontDark">#FFFFFF</color>
     <color name="colorFontGray">#696C80</color>
     <color name="colorBackground">#131313</color>
+    <color name="colorGrayThemed">#1E1D1D</color>
 </resources>
