--- a/app/src/main/res/drawable/bg_inc_message.xml
+++ b/app/src/main/res/drawable/bg_inc_message.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#F1F2F6" />
+    <solid android:color="@color/colorGrayThemed" />
     <corners android:radius="20dp" />
     <padding
         android:bottom="0dp"
