--- a/app/src/main/res/layout/sceyt_ui_item_inc_text_message.xml
+++ b/app/src/main/res/layout/sceyt_ui_item_inc_text_message.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="8dp">
+    android:paddingBottom="4dp">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/messageDay"
@@ -14,6 +14,7 @@
         android:includeFontPadding="false"
         android:paddingHorizontal="8dp"
         android:paddingVertical="4dp"
+        android:layout_marginBottom="8dp"
         android:text="Feb 24"
         android:textColor="@color/colorFontGray"
         android:textSize="@dimen/extraSmallTextSize"
@@ -39,6 +40,7 @@
         android:id="@+id/toReplayLine"
         android:layout_width="10dp"
         android:layout_height="0dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/tvReplayCount"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/viewBg" />
@@ -54,7 +56,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/avatar2"
         app:layout_constraintTop_toBottomOf="@+id/messageDay"
-        app:layout_constraintWidth_percent=".6" />
+        app:layout_constraintWidth_max="220dp" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/messageBody"
@@ -62,7 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="12dp"
         android:layout_marginVertical="8dp"
-        android:text="Lore ipsum description is created"
+        android:text="Lore ipsum  is "
         android:textColor="@color/colorFontDark"
         android:textSize="@dimen/mediumTextSize"
         app:layout_constraintBottom_toBottomOf="@+id/viewBg"
@@ -70,16 +72,16 @@
         app:layout_constraintStart_toStartOf="@+id/viewBg"
         app:layout_constraintTop_toTopOf="@+id/viewBg" />
 
-    <androidx.appcompat.widget.AppCompatTextView
+    <com.sceyt.chat.ui.presentation.customviews.DateStatusView
         android:id="@+id/messageDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="12dp"
         android:layout_marginBottom="5dp"
-        android:includeFontPadding="false"
-        android:text="00:37"
-        android:textColor="#7C7E8E"
-        android:textSize="@dimen/tinyTextSize"
+        app:dateText="00:37"
+        app:dateTextColor="#7C7E8E"
+        app:dateTextSize="@dimen/tinyTextSize"
+        app:firstStatus="false"
         app:layout_constraintBottom_toBottomOf="@id/viewBg"
         app:layout_constraintEnd_toEndOf="@id/viewBg" />
 
@@ -98,7 +100,7 @@
         android:layout_marginStart="3dp"
         android:orientation="horizontal"
         android:paddingTop="4dp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/tvReplayCount"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0"
