Also was started creating UI for message reactions.

--- a/app/src/main/res/layout/sceyt_ui_item_inc_text_message_2.xml
+++ b/app/src/main/res/layout/sceyt_ui_item_inc_text_message_2.xml
@@ -30,6 +30,7 @@
             android:textColor="@color/colorFontGray"
             android:textSize="@dimen/extraSmallTextSize"
             android:visibility="gone"
+            bind:visibleIf="@{message.showDate}"
             tools:text="Feb 24" />
 
         <com.sceyt.chat.ui.presentation.customviews.Avatar
