--- a/app/src/main/res/layout/sceyt_ui_item_out_text_message.xml
+++ b/app/src/main/res/layout/sceyt_ui_item_out_text_message.xml
@@ -1,120 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:paddingBottom="4dp"
-    android:layout_height="wrap_content">
+    xmlns:bind="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/messageDay"
-        android:layout_width="wrap_content"
+    <data>
+
+        <variable
+            name="message"
+            type="com.sceyt.chat.ui.data.models.messages.SceytUiMessage" />
+    </data>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_message_day"
-        android:includeFontPadding="false"
-        android:paddingHorizontal="8dp"
-        android:paddingVertical="4dp"
-        android:text="Feb 24"
-        android:textColor="@color/colorFontGray"
-        android:textSize="@dimen/extraSmallTextSize"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        android:paddingBottom="4dp">
 
-    <com.sceyt.chat.ui.presentation.customviews.ToReplayLineView
-        android:id="@+id/toReplayLine"
-        android:layout_width="10dp"
-        android:layout_height="0dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@id/tvReplayCount"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/viewBg"
-        app:toLeft="true" />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/messageDay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/bg_message_day"
+            android:includeFontPadding="false"
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="4dp"
+            android:textColor="@color/colorFontGray"
+            android:textSize="@dimen/extraSmallTextSize"
+             android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
+            bind:visibleIf="@{message.showDate}"
+            tools:text="Feb 24" />
 
-    <View
-        android:id="@+id/viewBg"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/bg_out_message"
-        app:layout_constraintBottom_toTopOf="@+id/barrier"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/messageDay"
-        app:layout_constraintWidth_percent=".6" />
+        <com.sceyt.chat.ui.presentation.customviews.ToReplayLineView
+            android:id="@+id/toReplayLine"
+            android:layout_width="10dp"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/layoutDetails"
+            android:layout_alignBottom="@+id/tvReplayCount"
+            android:layout_alignParentEnd="true"
+             android:visibility="gone"
+            app:toLeft="true" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/messageBody"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="12dp"
-        android:layout_marginVertical="8dp"
-        android:text="Lore ipsum description is created"
-        android:textColor="@color/colorFontDark"
-        android:textSize="@dimen/mediumTextSize"
-        app:layout_constraintBottom_toBottomOf="@+id/viewBg"
-        app:layout_constraintEnd_toEndOf="@+id/viewBg"
-        app:layout_constraintStart_toStartOf="@+id/viewBg"
-        app:layout_constraintTop_toTopOf="@+id/viewBg" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layoutDetails"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/messageDay"
+            android:layout_alignParentEnd="true"
+            android:background="@drawable/bg_out_message">
 
-    <com.sceyt.chat.ui.presentation.customviews.DateStatusView
-        android:id="@+id/messageDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="5dp"
-        android:includeFontPadding="false"
-        app:dateText="00:37"
-        app:dateTextColor="#7C7E8E"
-        app:dateTextSize="@dimen/tinyTextSize"
-        app:firstStatus="false"
-        app:layout_constraintBottom_toBottomOf="@id/viewBg"
-        app:layout_constraintEnd_toEndOf="@id/viewBg"
-        app:statusIcon="@drawable/ic_status_read"
-        app:statusIconMargin="5dp" />
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/messageBody"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="12dp"
+                android:layout_marginVertical="8dp"
+                android:textColor="@color/colorFontDarkFinal"
+                android:textSize="@dimen/mediumTextSize"
+                app:layout_constraintBottom_toBottomOf="@+id/layoutDetails"
+                app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
+                app:layout_constraintStart_toStartOf="@+id/layoutDetails"
+                app:layout_constraintTop_toTopOf="@+id/layoutDetails"
+                app:layout_constraintWidth_max="@dimen/bodyMaxWidth"
+                tools:text="Lore ipsum description is created from" />
 
-    <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/barrier"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/black"
-        app:barrierDirection="top"
-        app:constraint_referenced_ids="rvReactions,tvReplayCount" />
+            <com.sceyt.chat.ui.presentation.customviews.DateStatusView
+                android:id="@+id/messageDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="15dp"
+                android:layout_marginBottom="6dp"
+                android:includeFontPadding="false"
+                app:dateTextColor="#7C7E8E"
+                app:dateTextSize="@dimen/tinyTextSize"
+                app:firstStatus="false"
+                app:layout_constraintBottom_toBottomOf="@id/layoutDetails"
+                app:layout_constraintEnd_toEndOf="@id/layoutDetails"
+                app:statusIconMargin="5dp"
+                app:statusIconSize="16dp"
+                bind:incoming="@{message.incoming}"
+                bind:status="@{message.deliveryStatus}"
+                tools:dateText="00:37"
+                tools:statusIcon="@drawable/ic_status_read" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvReactions"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingTop="4dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@id/tvReplayCount"
-        app:layout_constraintEnd_toEndOf="@+id/viewBg"
-        app:layout_constraintHorizontal_bias="0"
-        app:layout_constraintWidth_percent=".5"
-        tools:itemCount="3"
-        tools:listitem="@layout/item_reaction" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvReplayCount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
-        android:paddingTop="3dp"
-        android:text="34 reply"
-        android:textColor="@color/colorAccent"
-        android:textSize="@dimen/tinyTextSize"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/toReplayLine" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvReactions"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/layoutDetails"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="3dp"
+            android:orientation="horizontal"
+            android:paddingTop="4dp"
+             android:visibility="gone"
+            tools:itemCount="3"
+            tools:listitem="@layout/item_reaction" />
 
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/groupReplayCount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:constraint_referenced_ids="tvReplayCount,toReplayLine" />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvReplayCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/rvReactions"
+            android:layout_marginEnd="2dp"
+            android:layout_toStartOf="@+id/toReplayLine"
+            android:paddingTop="3dp"
+            android:textColor="@color/colorAccent"
+            android:textSize="@dimen/tinyTextSize"
+             android:visibility="gone"
+            tools:text="34 reply" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </RelativeLayout>
+</layout>
