--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,6 @@
     <color name="colorFontWarning">#ED4D60</color>
     <color name="colorGray">#F1F2F6</color>
     <color name="colorGrayThemed">#F1F2F6</color>
+    <color name="colorBgOutMessage">#E3E7FF</color>
+
 </resources>
