--- a/app/src/main/res/drawable/bg_out_message.xml
+++ b/app/src/main/res/drawable/bg_out_message.xml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#E3E7FF" />
+    <solid android:color="@color/colorBgOutMessage" />
     <corners android:radius="20dp" />
-    <padding
-        android:bottom="0dp"
-        android:left="0dp"
-        android:right="0dp"
-        android:top="0dp" />
 </shape>
