--- a/app/src/main/res/layout/sceyt_ui_item_out_files_message.xml
+++ b/app/src/main/res/layout/sceyt_ui_item_out_files_message.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="8dp"
+            android:layout_marginVertical="8dp"
             android:background="@drawable/bg_message_day"
             android:includeFontPadding="false"
             android:paddingHorizontal="8dp"
@@ -46,6 +46,8 @@
             android:layout_alignBottom="@+id/tvReplayCount"
             android:layout_alignParentEnd="true"
             android:visibility="gone"
+            app:connectedViewBottom="@id/tvReplayCount"
+            app:connectedViewTop="@id/layoutDetails"
             app:toLeft="true" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -58,19 +60,31 @@
             android:maxWidth="@dimen/bodyMaxWidth"
             android:minWidth="@dimen/bodyMaxWidth">
 
+            <include
+                android:id="@+id/viewReplay"
+                layout="@layout/sceyt_ui_recycler_replay_container"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="@+id/messageBody"
+                app:layout_constraintStart_toStartOf="@+id/messageBody"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/messageBody"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginVertical="8dp"
-                android:paddingHorizontal="12dp"
+                android:layout_marginHorizontal="12dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="8dp"
                 android:text="@{message.body}"
                 android:textColor="@color/colorFontDark"
                 android:textSize="@dimen/mediumTextSize"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
                 app:layout_constraintStart_toStartOf="@+id/layoutDetails"
-                app:layout_constraintTop_toTopOf="@+id/layoutDetails"
+                app:layout_constraintTop_toBottomOf="@+id/viewReplay"
                 bind:visibleIf="@{!message.body.empty}"
                 tools:text="Lore ipsum  is the correct text which" />
 
@@ -79,22 +93,22 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:paddingBottom="4dp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/messageBody"
                 tools:itemCount="3"
-                tools:listitem="@layout/sceyt_ui_file_item" />
+                tools:listitem="@layout/sceyt_ui_message_file_item" />
 
             <com.sceyt.chat.ui.presentation.customviews.DateStatusView
                 android:id="@+id/messageDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="10dp"
                 android:layout_marginBottom="6dp"
-                android:paddingHorizontal="8dp"
-                android:includeFontPadding="false"
+                android:paddingHorizontal="6dp"
                 app:dateTextColor="#7C7E8E"
                 app:dateTextSize="@dimen/tinyTextSize"
                 app:firstStatus="false"
@@ -127,9 +141,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/rvReactions"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="2dp"
             android:layout_toStartOf="@+id/toReplayLine"
-            android:paddingTop="3dp"
+            android:includeFontPadding="false"
             android:textColor="@color/colorAccent"
             android:textSize="@dimen/tinyTextSize"
             android:visibility="gone"
