--- a/app/src/main/res/layout/sceyt_ui_item_out_text_message.xml
+++ b/app/src/main/res/layout/sceyt_ui_item_out_text_message.xml
@@ -22,14 +22,14 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="8dp"
+            android:layout_marginVertical="8dp"
             android:background="@drawable/bg_message_day"
             android:includeFontPadding="false"
             android:paddingHorizontal="8dp"
             android:paddingVertical="4dp"
             android:textColor="@color/colorFontGray"
             android:textSize="@dimen/extraSmallTextSize"
-             android:visibility="gone"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -45,7 +45,9 @@
             android:layout_alignTop="@+id/layoutDetails"
             android:layout_alignBottom="@+id/tvReplayCount"
             android:layout_alignParentEnd="true"
-             android:visibility="gone"
+            android:visibility="gone"
+            app:connectedViewBottom="@id/tvReplayCount"
+            app:connectedViewTop="@id/layoutDetails"
             app:toLeft="true" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -56,18 +58,30 @@
             android:layout_alignParentEnd="true"
             android:background="@drawable/bg_out_message">
 
+            <include
+                android:id="@+id/viewReplay"
+                layout="@layout/sceyt_ui_recycler_replay_container"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="@+id/messageBody"
+                app:layout_constraintStart_toStartOf="@+id/messageBody"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/messageBody"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="12dp"
-                android:layout_marginVertical="8dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="8dp"
                 android:textColor="@color/colorFontDarkFinal"
                 android:textSize="@dimen/mediumTextSize"
                 app:layout_constraintBottom_toBottomOf="@+id/layoutDetails"
                 app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
                 app:layout_constraintStart_toStartOf="@+id/layoutDetails"
-                app:layout_constraintTop_toTopOf="@+id/layoutDetails"
+                app:layout_constraintTop_toBottomOf="@+id/viewReplay"
                 app:layout_constraintWidth_max="@dimen/bodyMaxWidth"
                 tools:text="Lore ipsum description is created from" />
 
@@ -101,7 +115,7 @@
             android:layout_marginEnd="3dp"
             android:orientation="horizontal"
             android:paddingTop="4dp"
-             android:visibility="gone"
+            android:visibility="gone"
             tools:itemCount="3"
             tools:listitem="@layout/item_reaction" />
 
@@ -110,12 +124,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/rvReactions"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="2dp"
             android:layout_toStartOf="@+id/toReplayLine"
-            android:paddingTop="3dp"
+            android:includeFontPadding="false"
             android:textColor="@color/colorAccent"
             android:textSize="@dimen/tinyTextSize"
-             android:visibility="gone"
+            android:visibility="gone"
             tools:text="34 reply" />
 
     </RelativeLayout>
